시계 작동 완료

--- a/hamiltonKhaki/hamilton.html
+++ b/hamiltonKhaki/hamilton.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamilton_Khaki</title>
     <link rel="stylesheet" href="hamilton.css">
+    <style id="clockAnimate"></style>
 </head>
 <body>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
