--- a/hamiltonKhaki/hamilton.html
+++ b/hamiltonKhaki/hamilton.html
@@ -13,8 +13,8 @@
     viewBox="0 0 1920 1080" style="enable-background:new 0 0 1920 1080;" xml:space="preserve">
     <g id="watchCase">
     <g>
-        <rect x="775.13" y="-9.819" style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" width="337" height="1099"/>
-        <rect x="910.13" y="-9.331" style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" width="67.605" height="1099"/>
+        <rect x="775.13" y="-9.819" style="fill:#646f70;stroke:#000000;stroke-miterlimit:10;" width="337" height="1099"/>
+        <rect x="910.13" y="-9.331" style="fill:#c6c66f;stroke:#000000;stroke-miterlimit:10;" width="67.605" height="1099"/>
         <path class="watchCaseClass" style="fill:#b7bbbd;stroke:#000000;stroke-miterlimit:10;" d="M1260.833,465.113l-0.004-0.001
             c-12.059-81.96-50.698-139.931-50.698-139.931c-40-73-55-195-55-195c-1-5-3-5-3-5h-35c-5,0-5,4-5,4v105v6.332
             c-49.025-30.619-106.94-48.332-169-48.332c-61.638,0-119.188,17.472-168,47.708v-5.708v-105c0,0,0-4-5-4h-35c0,0-2,0-3,5
@@ -468,18 +468,18 @@
             c0.048,3.204,0.016,6.41,0.016,9.615C826.333,510.662,826.328,510.662,826.322,510.662z"/>
         <g>
             <g>
-                <path style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" d="M1318.87,522.274v-43.263c0-0.408-0.162-0.799-0.451-1.088
+                <path style="fill:#b7bbbd;stroke:#000000;stroke-miterlimit:10;" d="M1318.87,522.274v-43.263c0-0.408-0.162-0.799-0.451-1.088
                     l-3.579-3.579c-0.288-0.288-0.68-0.451-1.088-0.451h-44.576c-0.467,0-0.909,0.212-1.201,0.577l-3.197,3.996
                     c-0.218,0.273-0.337,0.612-0.337,0.961v53.405h0.044v42.846c0,0.349,0.119,0.688,0.337,0.961l3.197,3.996
                     c0.292,0.365,0.734,0.577,1.201,0.577h44.576c0.408,0,0.799-0.162,1.088-0.451l3.579-3.579c0.288-0.288,0.451-0.68,0.451-1.088
                     v-53.822H1318.87z"/>
-                <path style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" d="M1264.441,508.706v-16.48c0-0.243-0.294-0.365-0.466-0.193
+                <path style="fill:#a3a8ab;stroke:#000000;stroke-miterlimit:10;" d="M1264.441,508.706v-16.48c0-0.243-0.294-0.365-0.466-0.193
                     l-3.737,3.737c-0.051,0.051-0.08,0.121-0.08,0.193v42.189h0.096v12.743c0,0.072,0.029,0.142,0.08,0.193l3.737,3.737
                     c0.172,0.172,0.466,0.05,0.466-0.193v-45.927H1264.441z"/>
-                <path style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" d="M1320.284,480.65c-0.661-0.254-1.371,0.234-1.371,0.941
+                <path style="fill:#b7bbbd;stroke:#000000;stroke-miterlimit:10;" d="M1320.284,480.65c-0.661-0.254-1.371,0.234-1.371,0.941
                     v22.59v46.743v22.59c0,0.708,0.71,1.196,1.371,0.941l6.919-2.661c0.39-0.15,0.646-0.524,0.646-0.941v-19.929v-46.743v-19.929
                     c0-0.417-0.257-0.792-0.646-0.941L1320.284,480.65z"/>
-                <path style="fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;" d="M1328.43,504.216c-0.279-0.126-0.58,0.116-0.58,0.468v11.24
+                <path style="fill:#a3a8ab;stroke:#000000;stroke-miterlimit:10;" d="M1328.43,504.216c-0.279-0.126-0.58,0.116-0.58,0.468v11.24
                     v23.258v11.24c0,0.352,0.301,0.595,0.58,0.468l2.927-1.324c0.165-0.075,0.274-0.261,0.274-0.468v-9.916v-23.258v-9.916
                     c0-0.208-0.109-0.394-0.274-0.468L1328.43,504.216z"/>
             </g>
